<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="please_come_again">Please Come Again!</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="place_order">Order:</string>
    <string name="_1">1</string>
</resources>
